--- a/pegmatite/manifest.json
+++ b/pegmatite/manifest.json
@@ -3,11 +3,16 @@
 	"name": "Pegmatite",
 	"version": "1.0",
 	"description": "Shows graphs and diagrams rendered by PlantUML.",
-	"content_scripts": [{
-		"js": [
-			"rawdeflate.js",
-			"content-script.js"
-		],
-		"matches": ["https://github.com/*"]
-	}]
+	"content_scripts": [
+		{
+			"js": [
+				"rawdeflate.js",
+				"content-script.js"
+			],
+			"matches": [
+				"https://github.com/*",
+				"https://gist.github.com/*"
+			]
+		}
+	]
 }
