--- a/pegmatite/manifest.json
+++ b/pegmatite/manifest.json
@@ -7,6 +7,11 @@
 		"storage"
 	],
 	"options_page": "options.html",
+	"background": {
+		"scripts": [
+			"background.js"
+		]
+	},
 	"content_scripts": [
 		{
 			"js": [
