--- a/pegmatite/manifest.json
+++ b/pegmatite/manifest.json
@@ -4,7 +4,8 @@
 	"version": "1.1.0",
 	"description": "Shows graphs and diagrams rendered by PlantUML.",
 	"permissions": [
-		"storage"
+		"storage",
+		"<all_urls>"
 	],
 	"options_page": "options.html",
 	"background": {
