--- a/pegmatite/manifest.json
+++ b/pegmatite/manifest.json
@@ -3,7 +3,16 @@
   "name": "Pegmatite",
   "version": "1.6.0",
   "description": "Shows graphs and diagrams rendered by PlantUML.",
-  "permissions": ["storage", "https://*/*", "tabs"],
+  "permissions": [
+    "https://github.com/*",
+    "https://gist.github.com/*",
+    "https://gitpitch.com/*",
+    "https://gitlab.com/*",
+    "https://bitbucket.org/*",
+    "https://*.backlog.jp/wiki/*",
+    "storage",
+    "tabs"
+  ],
   "options_page": "options.html",
   "options_ui": {
     "page": "options.html",
